--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,25 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
 		<title>Página inicial</title>
 	</head>
-	<body background="images/fundo.png">
+	<body background="static/img/fundo.png">
 		<div class="corpo">
 			<header>
 				<div>
-					<img src="images/logo.png" alt="unes universidade" />
+					<img src="static/img/logo.png" alt="unes universidade" />
 				</div>
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="info.html">Quem somos</a></li>
-						<li><a href="contact.html">Contato</a></li>
+						<li><a href="{{ url_for('index') }}">Home</a></li>
+						<li><a href="{{ url_for('info') }}">Quem somos</a></li>
+						<li><a href="{{ url_for('contact') }}">Contato</a></li>
 					</ul>
 				</nav>
 			</header>
 			<div>
 				<div style="justify-content: center; display: flex">
-					<img src="images/capa.png" alt="imagem de capa" />
+					<img src="static/img/capa.png" alt="imagem de capa" />
 				</div>
 				<div>
 					<h2>Sobre a universidade</h2>
