--- a/templates/contact.html
+++ b/templates/contact.html
@@ -30,11 +30,11 @@
 					</p>
 				</div>
 				<div style="border-top: 1px solid lightgrey; padding-top: 10px">
-					<form action="">
+					<form method="POST">
 						<label for="email">E-mail:</label>
-						<input type="text" id="email" />
-						<label for="matter">Assunto:</label>
-						<input type="text" id="matter" />
+						<input type="text" id="email" name="email" />
+						<label for="subject">Assunto:</label>
+						<input type="text" id="subject" name="subject" />
 						<label for="description">Descrição:</label>
 						<textarea
 							name="description"
